[gd_scene load_steps=7 format=3 uid="uid://sl51on6lkrii"]

[ext_resource type="Script" path="res://Menus/Main Menu/main_menu.gd" id="1_e4nnw"]
[ext_resource type="Theme" uid="uid://5whm1igkt23h" path="res://addons/GD-Sync/UI/ConfigMenu/GD-Theme.tres" id="2_wrm8m"]
[ext_resource type="Texture2D" uid="uid://ckmwwf2bgwve4" path="res://Assets/Splash Screen/MAIN MENU.png" id="3_rssk6"]
[ext_resource type="PackedScene" uid="uid://ve5eobmbrwoj" path="res://Modules/Modules/Transition/glitch_transition.tscn" id="4_dy21i"]
[ext_resource type="AudioStream" uid="uid://dhot1bupght0c" path="res://Assets/Sounds/BGM/lobby.mp3" id="5_hy3kp"]
[ext_resource type="AudioStream" uid="uid://ddxjw6xncpxn2" path="res://Assets/Sounds/SFX/Button click.mp3" id="6_ehn44"]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_e4nnw")

[node name="Glitch Transition" parent="." instance=ExtResource("4_dy21i")]
top_level = true

[node name="VideoStreamPlayer" parent="Glitch Transition" index="0"]
top_level = true
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = -540.0
offset_right = 960.0
offset_bottom = 540.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
autoplay = false

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_wrm8m")

[node name="TextureRect" type="TextureRect" parent="PanelContainer"]
layout_mode = 2
texture = ExtResource("3_rssk6")

[node name="Control" type="Control" parent="PanelContainer"]
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="PanelContainer/Control"]
layout_mode = 2
offset_left = 755.0
offset_top = 748.0
offset_right = 1146.0
offset_bottom = 1080.0
size_flags_horizontal = 4
size_flags_vertical = 8

[node name="Connect" type="Button" parent="PanelContainer/Control/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 75)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("2_wrm8m")
text = "CONNECT"

[node name="Quit" type="Button" parent="PanelContainer/Control/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 75)
layout_mode = 2
theme = ExtResource("2_wrm8m")
text = "QUIT"

[node name="Message" type="Label" parent="PanelContainer/Control/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
horizontal_alignment = 1
vertical_alignment = 1

[node name="Theme" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_hy3kp")
volume_db = -7.298

[node name="Click" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("6_ehn44")

[connection signal="pressed" from="PanelContainer/Control/VBoxContainer/Connect" to="." method="_on_connect_pressed"]
[connection signal="pressed" from="PanelContainer/Control/VBoxContainer/Quit" to="." method="_on_quit_pressed"]

[editable path="Glitch Transition"]
